--- a/index.html
+++ b/index.html
@@ -159,9 +159,16 @@
       <div class="space-y-6 opacity-0 -translate-x-8 transition-all duration-800 ease-out delay-200 reveal">
         <h3 class="text-2xl tracking-wide">Design Philosophy</h3>
         <p class="text-gray-600 leading-relaxed">
-          My approach to fashion design is rooted in the belief that clothing should be both beautiful and meaningful. 
-          I draw inspiration from architecture, nature, and cultural movements to create pieces that challenge 
-          traditional silhouettes while maintaining wearability.
+          I believe fashion is storytelling, every stitch carries memory, rebellion, and
+          possibility. My work blends the elegance of vintage silhouettes with the daring spirit of
+          avant-garde, creating pieces that feel both timeless and unapologetically modern.
+          <br><br>
+          Inspired by music, theatre, and women who turned style into self-expression, I design clothes
+          that move between costume and reality, garments that let people step into their own
+          spotlight.
+          <br>
+          Fashion, to me, is about liberation. I want my designs to give people the power to feel bold,
+          vulnerable, and completely themselves, like wearing their own story.
         </p>
         <p class="text-gray-600 leading-relaxed">
           Sustainability is at the core of my practice. I focus on zero-waste patterns, upcycled materials, 
@@ -172,10 +179,10 @@
           <div>
             <h4 class="font-medium mb-2">Focus Areas</h4>
             <ul class="text-gray-600 space-y-1">
-              <li>• Sustainable Fashion</li>
-              <li>• Avant-garde Design</li>
-              <li>• Pattern Making</li>
-              <li>• Textile Innovation</li>
+              <li>• Integration of vintage aesthetics (1950s/60s, 1990s, 2000s) with modern avant-gard</li>
+              <li>• Designing garments that empower authenticity, confidence, and self-expression</li>
+              <li>• Fashion design with an emphasis on storytelling, cultural history, and theatrical influence</li>
+              <li>• Development of cohesive concepts and collections that balance timeless elegance with bold experimentation</li>
             </ul>
           </div>
         </div>
@@ -186,18 +193,18 @@
         <div class="bg-gray-50 p-8 rounded-lg">
           <h4 class="font-medium mb-4">Current Studies</h4>
           <p class="text-gray-600 mb-4">
-            Bachelor of Fine Arts in Fashion Design<br />
-            Parsons School of Design, New York<br />
-            Expected Graduation: May 2025
+            Associate of Applied Science in Fashion<br />
+            Westchester Community College, Westchester, NY<br />
+            Expected Graduation: May 2027
           </p>
           <div class="space-y-2">
             <div class="flex justify-between">
               <span class="text-gray-600">GPA</span>
-              <span>3.9/4.0</span>
+              <span>2.5/4.0</span>
             </div>
             <div class="flex justify-between">
               <span class="text-gray-600">Dean's List</span>
-              <span>2023, 2024</span>
+              <span>N/A</span>
             </div>
           </div>
         </div>
@@ -238,7 +245,7 @@
           />
           <div class="absolute inset-0 bg-black/0 group-hover:bg-black/10 transition-all duration-300"></div>
           <div class="absolute bottom-6 left-6 right-6 text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-            <h3 class="text-xl font-medium mb-2">Alex Chen</h3>
+            <h3 class="text-xl font-medium mb-2">Lillian Lema Leon</h3>
             <p class="text-sm text-gray-200">Fashion Design Student & Creative Visionary</p>
           </div>
         </div>
@@ -252,29 +259,30 @@
         <div class="space-y-4">
           <h3 class="text-2xl tracking-wide">Meet the Designer</h3>
           <p class="text-gray-600 leading-relaxed">
-            I'm a passionate fashion design student with a vision to revolutionize the industry through 
-            sustainable and innovative design practices. My journey began with sketching in high school 
-            notebooks and has evolved into a comprehensive understanding of garment construction, 
-            pattern making, and textile science.
+            I am Lilliana Diana Lema Leon, a fashion design student and emerging designer with a
+            passion for merging vintage inspiration with modern rebellion. My work explores the tension
+            between timeless elegance and bold experimentation, drawing from theatre, music, and
+            cultural history. My dream is to create a label that empowers people to express their most
+            authentic selves — whether on stage, on the street, or anywhere in between.
           </p>
         </div>
 
         <div class="grid grid-cols-2 gap-6">
           <div class="space-y-2">
             <h4 class="font-medium text-gray-900">Based In</h4>
-            <p class="text-gray-600">New York City</p>
+            <p class="text-gray-600">Westchester County, NY</p>
           </div>
           <div class="space-y-2">
             <h4 class="font-medium text-gray-900">Year</h4>
-            <p class="text-gray-600">Junior (2025)</p>
+            <p class="text-gray-600">Freshman</p>
           </div>
           <div class="space-y-2">
             <h4 class="font-medium text-gray-900">Specialization</h4>
-            <p class="text-gray-600">Sustainable Fashion</p>
+            <p class="text-gray-600">Vintage Fashion</p>
           </div>
           <div class="space-y-2">
             <h4 class="font-medium text-gray-900">Tools</h4>
-            <p class="text-gray-600">CLO 3D, Illustrator</p>
+            <p class="text-gray-600">N/A</p>
           </div>
         </div>
 
@@ -489,11 +497,11 @@
                       d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
                   </svg>
                 </div>
-                <span class="text-3xl font-light text-gray-400">01</span>
+                <span class="text-3xl font-light text-gray-400">03</span>
               </div>
-              <h3 class="text-xl font-medium mb-4">Research & Inspiration</h3>
+              <h3 class="text-xl font-medium mb-4">Design & Development</h3>
               <p class="text-gray-600 leading-relaxed">
-                Gathering inspiration from art, architecture, nature, and cultural movements to inform the design direction.
+                Select fabrics, colors, and details; create digital mockups or prototypes.
               </p>
             </div>
           </div>
@@ -514,11 +522,35 @@
                       d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
                   </svg>
                 </div>
-                <span class="text-3xl font-light text-gray-400">02</span>
+                <span class="text-3xl font-light text-gray-400">04</span>
               </div>
-              <h3 class="text-xl font-medium mb-4">Sketch & Concept</h3>
+              <h3 class="text-xl font-medium mb-4">Sampling & Fitting</h3>
               <p class="text-gray-600 leading-relaxed">
-                Translating ideas into initial sketches and developing the core concept through iterative design exploration.
+                Produce samples, test fit and comfort, and adjust designs as needed.
+              </p>
+            </div>
+          </div>
+          <div class="hidden lg:block relative">
+            <div class="w-6 h-6 bg-black rounded-full border-4 border-white shadow-lg"></div>
+          </div>
+          <div class="lg:w-1/2 w-full"></div>
+        </div>
+        <!-- Step 03 -->
+        <div class="flex items-center lg:flex-row flex-col lg:gap-16 gap-8 opacity-0 animate-fadeInLeft">
+          <div class="lg:w-1/2 w-full">
+            <div class="bg-white p-8 rounded-lg shadow-lg text-center lg:text-right hover:-translate-y-1 transition-transform duration-300">
+              <div class="flex items-center justify-center lg:justify-end mb-4">
+                <div class="w-12 h-12 bg-black text-white rounded-full flex items-center justify-center mr-4">
+                  <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                      d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+                  </svg>
+                </div>
+                <span class="text-3xl font-light text-gray-400">05</span>
+              </div>
+              <h3 class="text-xl font-medium mb-4">Final Production</h3>
+              <p class="text-gray-600 leading-relaxed">
+                Approve final pieces and prepare for launch or collection showcase.
               </p>
             </div>
           </div>
@@ -563,8 +595,9 @@
         <h3 class="text-2xl font-medium mb-8">Recognition & Experience</h3>
         <div class="relative">
           <div class="absolute left-6 top-0 bottom-0 w-0.5 bg-gray-200"></div>
-
+          
           <!-- Item -->
+           <!--
           <div class="relative flex items-start mb-8 last:mb-0 opacity-0 animate-fadeInUp delay-200">
             <div class="flex-shrink-0 w-12 h-12 bg-black text-white rounded-full flex items-center justify-center z-10">
               <span class="text-sm font-medium">24</span>
@@ -581,7 +614,7 @@
             </div>
           </div>
 
-          <!-- Item -->
+           Item
           <div class="relative flex items-start mb-8 last:mb-0 opacity-0 animate-fadeInUp delay-300">
             <div class="flex-shrink-0 w-12 h-12 bg-black text-white rounded-full flex items-center justify-center z-10">
               <span class="text-sm font-medium">24</span>
@@ -597,7 +630,7 @@
               </p>
             </div>
           </div>
-
+            -->
           <!-- Add more items following the same pattern for 2023 & 2022 -->
         </div>
       </div>
@@ -609,7 +642,7 @@
           <!-- Skill -->
           <div class="space-y-2 opacity-0 animate-fadeInUp delay-400">
             <div class="flex justify-between items-center">
-              <span class="font-medium">Pattern Making</span>
+              <span class="font-medium">Pattern Making & Draping</span>
               <span class="text-sm text-gray-600">95%</span>
             </div>
             <div class="w-full bg-gray-200 rounded-full h-2 overflow-hidden">
@@ -620,11 +653,41 @@
           <!-- Skill -->
           <div class="space-y-2 opacity-0 animate-fadeInUp delay-500">
             <div class="flex justify-between items-center">
-              <span class="font-medium">Garment Construction</span>
+              <span class="font-medium">Collection Development</span>
               <span class="text-sm text-gray-600">90%</span>
             </div>
             <div class="w-full bg-gray-200 rounded-full h-2 overflow-hidden">
               <div class="bg-black h-2 rounded-full animate-growBar" style="--bar-width:90%"></div>
+            </div>
+          </div>
+          <!-- Skill -->
+          <div class="space-y-2 opacity-0 animate-fadeInUp delay-500">
+            <div class="flex justify-between items-center">
+              <span class="font-medium">Styling & Presentation</span>
+              <span class="text-sm text-gray-600">85%</span>
+            </div>
+            <div class="w-full bg-gray-200 rounded-full h-2 overflow-hidden">
+              <div class="bg-black h-2 rounded-full animate-growBar" style="--bar-width:85%"></div>
+            </div>
+          </div>
+          <!-- Skill -->
+          <div class="space-y-2 opacity-0 animate-fadeInUp delay-500">
+            <div class="flex justify-between items-center">
+              <span class="font-medium">Collaboration & Screative Direction</span>
+              <span class="text-sm text-gray-600">95%</span>
+            </div>
+            <div class="w-full bg-gray-200 rounded-full h-2 overflow-hidden">
+              <div class="bg-black h-2 rounded-full animate-growBar" style="--bar-width:95%"></div>
+            </div>
+          </div>
+          <!-- Skill -->
+          <div class="space-y-2 opacity-0 animate-fadeInUp delay-500">
+            <div class="flex justify-between items-center">
+              <span class="font-medium">Gourmet Construction</span>
+              <span class="text-sm text-gray-600">80%</span>
+            </div>
+            <div class="w-full bg-gray-200 rounded-full h-2 overflow-hidden">
+              <div class="bg-black h-2 rounded-full animate-growBar" style="--bar-width:80%"></div>
             </div>
           </div>
 
@@ -636,16 +699,15 @@
           <h4 class="font-medium mb-4">Education</h4>
           <div class="space-y-4">
             <div>
-              <h5 class="font-medium">Bachelor of Fine Arts - Fashion Design</h5>
-              <p class="text-gray-600 text-sm">Parsons School of Design, New York</p>
-              <p class="text-gray-600 text-sm">Expected Graduation: May 2025</p>
-              <p class="text-gray-600 text-sm">GPA: 3.9/4.0</p>
+              <h5 class="font-medium">Associate of Applied Science - Fashion Design</h5>
+              <p class="text-gray-600 text-sm">Westchester Community College, Westchester, NY</p>
+              <p class="text-gray-600 text-sm">Expected Graduation: May 2027</p>
+              <p class="text-gray-600 text-sm">GPA: 2.5/4.0</p>
             </div>
             <div>
               <h5 class="font-medium">High School Diploma</h5>
-              <p class="text-gray-600 text-sm">Arts & Design Academy, Los Angeles</p>
-              <p class="text-gray-600 text-sm">Graduated: 2021</p>
-              <p class="text-gray-600 text-sm">Valedictorian</p>
+              <p class="text-gray-600 text-sm">Ossinging High School</p>
+              <p class="text-gray-600 text-sm">Graduated: May 2025</p>
             </div>
           </div>
         </div>
@@ -689,7 +751,7 @@
             </div>
             <div>
               <p class="font-medium">Location</p>
-              <p class="text-gray-300">New York City, NY</p>
+              <p class="text-gray-300">Westchester County, NY</p>
             </div>
           </div>
 
@@ -701,7 +763,7 @@
             </div>
             <div>
               <p class="font-medium">Availability</p>
-              <p class="text-gray-300">Open for Summer 2025 Internships</p>
+              <p class="text-gray-300">Open for Summer 2026 Internships</p>
             </div>
           </div>
 
@@ -724,7 +786,7 @@
         <h3 class="text-2xl font-medium mb-6">Connect With Me</h3>
         <div class="space-y-4">
           <!-- Instagram -->
-          <a href="#" class="fade-up flex items-center space-x-4 p-4 bg-white/5 rounded-lg hover:bg-white/10 transition-all duration-300 group">
+          <a href="https://www.instagram.com/lilliandesigns?utm_source=ig_web_button_share_sheet&igsh=MXZ5d3NmY3d0Z3Y4dg==" class="fade-up flex items-center space-x-4 p-4 bg-white/5 rounded-lg hover:bg-white/10 transition-all duration-300 group">
             <div class="w-12 h-12 bg-white/10 rounded-full flex items-center justify-center group-hover:bg-white/20 transition-colors">
               <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                 <path d="M7.5 2h9A5.5 5.5 0 0 1 22 7.5v9a5.5 5.5 0 0 1-5.5 5.5h-9A5.5 5.5 0 0 1 2 16.5v-9A5.5 5.5 0 0 1 7.5 2zm0 2A3.5 3.5 0 0 0 4 7.5v9A3.5 3.5 0 0 0 7.5 20h9a3.5 3.5 0 0 0 3.5-3.5v-9A3.5 3.5 0 0 0 16.5 4h-9zm9 1.5a1 1 0 1 1 0 2 1 1 0 0 1 0-2zM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6z"/>
@@ -732,7 +794,7 @@
             </div>
             <div>
               <p class="font-medium">Instagram</p>
-              <p class="text-gray-300 text-sm">@alexchen.designs</p>
+              <p class="text-gray-300 text-sm">@lilliandesigns</p>
             </div>
             <div class="ml-auto text-gray-400 group-hover:text-white transition-colors">→</div>
           </a>
@@ -744,25 +806,12 @@
             </div>
             <div>
               <p class="font-medium">LinkedIn</p>
-              <p class="text-gray-300 text-sm">Alex Chen</p>
+              <p class="text-gray-300 text-sm">Lillian Leon</p>
             </div>
             <div class="ml-auto text-gray-400 group-hover:text-white transition-colors">→</div>
           </a>
-
-          <!-- Behance -->
-          <a href="#" class="fade-up flex items-center space-x-4 p-4 bg-white/5 rounded-lg hover:bg-white/10 transition-all duration-300 group">
-            <div class="w-12 h-12 bg-white/10 rounded-full flex items-center justify-center group-hover:bg-white/20 transition-colors">
-              <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M6.938 4.503c.702 0 1.34.06 1.92.188.577.13 1.07.33 1.485.61.41.28.733.65.96 1.12.225.47.34 1.05.34 1.73 0 .74-.17 1.36-.507 1.86-.338.5-.837.9-1.498 1.19.906.26 1.576.72 2.022 1.37.448.66.672 1.45.672 2.36 0 .75-.13 1.39-.41 1.93-.28.55-.67 1-1.16 1.35-.48.348-1.05.6-1.69.767-.64.16-1.345.24-2.116.24H0V4.503h6.938z"></path></svg>
-            </div>
-            <div>
-              <p class="font-medium">Behance</p>
-              <p class="text-gray-300 text-sm">Alex Chen</p>
-            </div>
-            <div class="ml-auto text-gray-400 group-hover:text-white transition-colors">→</div>
-          </a>
-
           <!-- Email -->
-          <a href="mailto:alex.chen@student.parsons.edu" class="fade-up flex items-center space-x-4 p-4 bg-white/5 rounded-lg hover:bg-white/10 transition-all duration-300 group">
+          <a href="mailto:llema32905@my.sunywwc.edu" class="fade-up flex items-center space-x-4 p-4 bg-white/5 rounded-lg hover:bg-white/10 transition-all duration-300 group">
             <div class="w-12 h-12 bg-white/10 rounded-full flex items-center justify-center group-hover:bg-white/20 transition-colors">
               <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                 <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2zm8 7l8-5H4l8 5zm0 2l-8-5v10h16V8l-8 5z"/>
@@ -781,7 +830,7 @@
     <!-- Footer -->
     <div class="fade-up text-center mt-16 pt-8 border-t border-gray-800">
       <p class="text-gray-400">
-        © 2025 Alex Chen. Designed with passion for sustainable fashion.
+        © 2025 Lillian Lema Leon. Designed with passion for sustainable fashion.
       </p>
     </div>
   </div>
