--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Alex Chen — Animated</title>
+  <title>Lillian Lema Leon - Fasion Student</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     /* initial hidden/transform states + transitions (timings chosen to match your motion delays) */
