--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       outline-offset: 2px;
     }
   </style>
+  
 </head>
 <body class="bg-white text-gray-900">
 
@@ -66,7 +67,7 @@
   <nav id="navbar" class="fixed top-0 left-0 right-0 z-50 bg-transparent">
     <div class="max-w-7xl mx-auto px-6 py-4">
       <div class="flex items-center justify-between">
-        <div class="text-xl font-medium tracking-wide select-none">Lilliana Lema Leon</div>
+        <div class="text-xl font-medium tracking-wide select-none">Lillian Lema Leon</div>
 
         <!-- Desktop Nav -->
         <div class="hidden md:flex space-x-8">
